FIX: improve layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,17 @@ mention::selection, tag::selection {
 }
 
 @media screen and (max-width: 767px) {
+    .current-season-area {
+        display: unset;
+    }
+
+    #shareButton {
+        margin-left: unset;
+    }
+
+    #listViewButton{
+        margin-left: unset;
+    }
 }
 
 .teamBoxContainer {
@@ -1127,7 +1138,7 @@ blockquote {
 
 .team-list-view-table th:nth-child(4),
 .team-list-view-table td:nth-child(4) {
-    width: 50px;
+    width: 75px;
     text-align: center;
 }
 
@@ -1167,7 +1178,7 @@ blockquote {
 }
 
 .team-list-view-table td {
-    padding: 12px 20px;
+    padding: 8px 20px;
     font-size: 0.95rem;
     -webkit-user-select: none;
     user-select: none;
@@ -1175,16 +1186,11 @@ blockquote {
 
 .team-list-view-table td:first-child {
     font-weight: bold;
-    font-size: 20px;
-}
-
-/* Color contrast for team rows - ensures text is readable */
-.team-list-view-table tbody tr[style*="background-color"] {
-    color: white;
+    font-size: 18px;
 }
 
 .team-list-full-institution {
-    font-weight:normal;
+    font-weight: normal;
 }
 
 .team-name-grid-flex {
@@ -1197,17 +1203,17 @@ blockquote {
 }
 
 .team-logo-grid {
-    width: 40px; 
-    height: 40px;
+    width: 35px; 
+    height: 35px;
 }
 
 @media screen and (max-width: 767px) {
     .team-list-view-table th {
-        padding: 5px;
+        padding: 10px 5px;
     }
 
     .team-list-view-table td {
-        padding: 10px 0px;
+        padding: 5px;
     }
 
     .team-list-full-institution {
@@ -1220,5 +1226,14 @@ blockquote {
 
     .team-list-view-table td {
         font-size: clamp(0.6rem, 2.5vw, 0.95em);
+    }
+
+    .team-text-flex {
+        margin-left: 5px;
+    }
+
+    .team-logo-grid {
+        width: 25px; 
+        height: 25px;
     }
 }
